<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/textview_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="2dp">



        <TextView
            android:id="@+id/name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textStyle="bold"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="2dp">

        <TextView
            android:id="@+id/calories_label"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caloriesLabel"
            android:background="@drawable/textview_border"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/calories_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:background="@drawable/textview_border"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="2dp">

        <TextView
            android:id="@+id/total_fat_label"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalFatLabel"
            android:background="@drawable/textview_border"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_fat_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:background="@drawable/textview_border"
            android:textSize="16sp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="2dp">

        <TextView
            android:id="@+id/protein_label"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/proteinLabel"
            android:background="@drawable/textview_border"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/protein_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:background="@drawable/textview_border"
            android:textSize="16sp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="2dp">

        <TextView
            android:id="@+id/carbohydrates_label"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carbsLabel"
            android:background="@drawable/textview_border"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/carbohydrates_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:background="@drawable/textview_border"
            android:textSize="16sp"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>